--- a/page03.html
+++ b/page03.html
@@ -11,12 +11,12 @@
     <h3 style="text-align: center;">&nbsp;<span style="-webkit-text-size-adjust: auto; font-family: helvetica; font-size: 28px; text-align: center;">Welcome to Movie Luxe!</span><span style="-webkit-text-size-adjust: auto; font-family: 
         helvetica; font-size: 25px;                                                                                                                                                                 text-align: center;"> </span></h3><p></p>
     <p style="text-align: center;">&nbsp;<span style="font-family: helvetica;-webkit-text-size-adjust: auto; font-size: 8px; text-align: center;"
-                                             <br><br>               Movies බලන්න නම් මෙ විදියට කරන්න. <br><br> 
+                                             <br>              Movies බලන්න නම් මෙ විදියට කරන්න. <br><br> 
         මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න 
           ඊටපස්සෙ ඔයාව වෙන පිටුවකට යයි. <br> 
-        ඒ පිටුවේ තප්පර 20ක් විතර ඉන්න <br><br>
+        ඒ පිටුවේ තප්පර 20ක් විතර ඉන්න <br>
         ඊටපස්සෙ බැක් වෙලා ඇවිත් ආපහු දෙවෙනියට තියෙන කොළ පාට බටන් එක ඔබන්න <br> 
-        එතකොට ඔයාව Movie එකට කෙලින්ම යයි <br><br>
+        එතකොට ඔයාව Movie එකට කෙලින්ම යයි <br>
         රතු පාට බටන් එක ඔබලා එන පිටුවේ තප්පර 20ක් ඉන්නෙ නැතුව කොළ පාට බටන් එක එබුවට වැඩ කරන්නෙ නෑ.. <br><br>
         ඒක නිසා කියපු විදිහට පිලිවෙලට කරන්න</p>
 
