--- a/page03.html
+++ b/page03.html
@@ -11,7 +11,7 @@
     <h3 style="text-align: center;">&nbsp;<span style="-webkit-text-size-adjust: auto; font-family: helvetica; font-size: 28px; text-align: center;">Welcome to Movie Luxe!</span><span style="-webkit-text-size-adjust: auto; font-family: 
         helvetica; font-size: 25px;                                                                                                                                                                 text-align: center;"> </span></h3><p></p>
     <p style="text-align: center;">&nbsp;<span style="font-family: helvetica;-webkit-text-size-adjust: auto; font-size: 8px; text-align: center;"
-                                             <br>              Movies බලන්න නම් මෙ විදියට කරන්න.
+                                             <br>              Movies බලන්න නම් මෙ විදියට කරන්න.<br>
         To watch the video, follow these rules <br><br> 
         මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න 
           ඊටපස්සෙ ඔයාව වෙන පිටුවකට යයි. <br> 
