--- a/page03.html
+++ b/page03.html
@@ -12,7 +12,7 @@
         helvetica; font-size: 25px;                                                                                                                                                                 text-align: center;"> </span></h3><p></p>
     <p style="text-align: center;">&nbsp;<span style="font-family: helvetica;-webkit-text-size-adjust: auto; font-size: 8px; text-align: center;"
                                              <br>              Movies බලන්න නම් මෙ විදියට කරන්න.<br>
-        To watch the video, follow these rules <br><br> 
+        To watch the video, follow these rules <br> திரைப்படங்களைப் பார்க்க, இதைச் செய்யுங்கள் <br><br>
         මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න 
           ඊටපස්සෙ ඔයාව වෙන පිටුවකට යයි. <br> 
         ඒ පිටුවේ තප්පර 20ක් විතර ඉන්න <br>
