--- a/page04.html
+++ b/page04.html
@@ -13,23 +13,23 @@
     <p style="text-align: center;">&nbsp;<span style="font-family: helvetica;-webkit-text-size-adjust: auto; font-size: 8px; text-align: center;"
                                              <br>              Movies බලන්න නම් මෙ විදියට කරන්න.<br>
         To watch the video, follow these rules <br> திரைப்படங்களைப் பார்க்க, இதைச் செய்யுங்கள் <br><br>
-        මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න <br> First, press the red button. <br> முதல் சிவப்பு பொத்தானை அழுத்தவும் <br><br>
+        මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න <br> First, press the red button.<br><br>
 
-          ඊටපස්සෙ ඔයාව වෙන පිටුවකට යයි. <br>  Then you will be taken to another page. <br> பின்னர் நீங்கள் மற்றொரு பக்கத்திற்கு அழைத்துச் செல்லப்படுவீர்கள். <br><br>
+          ඊටපස්සෙ ඔයාව වෙන පිටුවකට යයි. <br>  Then you will be taken to another page.<br><br>
 
-        ඒ පිටුවේ තප්පර 20ක් විතර ඉන්න <br> Stay on the page for about 20 seconds. <br> சுமார் 20 வினாடிகள் அந்தப் பக்கத்தில் இருங்கள் <br><br>
+        ඒ පිටුවේ තප්පර 20ක් විතර ඉන්න <br> Stay on the page for about 20 seconds.<br><br>
 
-        ඊටපස්සෙ බැක් වෙලා ඇවිත් ආපහු දෙවෙනියට තියෙන කොළ පාට බටන් එක ඔබන්න <br> Then come back and press the green button <br> பின்னர் திரும்பி வந்து இரண்டாவது பச்சை பொத்தானை அழுத்தவும் <br><br>
+        ඊටපස්සෙ බැක් වෙලා ඇවිත් ආපහු දෙවෙනියට තියෙන කොළ පාට බටන් එක ඔබන්න <br> Then come back and press the green button <br><br>
 
-        එතකොට ඔයාව Movie එකට කෙලින්ම යයි <br> Then you will go directly to the Movie. <br> பிறகு நேரடியாக படத்திற்கு செல்வீர்கள் <br><br> 
+        එතකොට ඔයාව Movie එකට කෙලින්ම යයි <br> Then you will go directly to the Movie.<br><br> 
 
         රතු පාට බටන් එක ඔබලා එන පිටුවේ තප්පර 20ක් ඉන්නෙ නැතුව කොළ පාට බටන් එක එබුවට වැඩ කරන්නෙ නෑ. <br> The red button does not work if you press the green button without being on the page for 20 seconds. <br> 20 வினாடிகள் பக்கத்தில் இருக்காமல் பச்சை பட்டனை அழுத்தினால் சிவப்பு பட்டன் வேலை செய்யாது. <br><br> 
-        ඒක නිසා කියපු විදිහට පිලිවෙලට කරන්න <br> fallow this Rules <br> எனவே சொன்னபடி வரிசையாகச் செய்யுங்கள் </p>
+        ඒක නිසා කියපු විදිහට පිලිවෙලට කරන්න <br> fallow this Rules  </p>
 
     <button id="redButton" class="btnRed2"style="-webkit-text-size-adjust: auto; background-color: red; border-radius: 10px;
-        color: white; display: block; font-size: 16px; height: 60px; margin: 0px auto; width: 300px;"  >ඔබන්න</button><br><br>
+        color: white; display: block; font-size: 16px; height: 60px; margin: 0px auto; width: 300px;"  >Click</button><br><br>
     <button id="greenButton" disabled class="btnGreen2"style="-webkit-text-size-adjust: auto; background-color: green; border-radius: 10px;
-        color: white; display: block; font-size: 16px; height: 60px; margin: 0px auto; width: 300px;"  >Movie බලන්න</button>
+        color: white; display: block; font-size: 16px; height: 60px; margin: 0px auto; width: 300px;"  >Watch the video</button>
 
     <script>
         // Get references to the buttons
