--- a/page04.html
+++ b/page04.html
@@ -12,7 +12,7 @@
         helvetica; font-size: 25px;                                                                                                                                                                 text-align: center;"> </span></h3><p></p>
     <p style="text-align: center;">&nbsp;<span style="font-family: helvetica;-webkit-text-size-adjust: auto; font-size: 8px; text-align: center;"
                                              <br>              Movies බලන්න නම් මෙ විදියට කරන්න.<br>
-        To watch the video, follow these rules <br> திரைப்படங்களைப் பார்க்க, இதைச் செய்யுங்கள் <br><br>
+        To watch the video, follow these rules <br><br>
         මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න <br> First, press the red button.<br><br>
 
           ඊටපස්සෙ ඔයාව වෙන පිටුවකට යයි. <br>  Then you will be taken to another page.<br><br>
@@ -23,7 +23,7 @@
 
         එතකොට ඔයාව Movie එකට කෙලින්ම යයි <br> Then you will go directly to the Movie.<br><br> 
 
-        රතු පාට බටන් එක ඔබලා එන පිටුවේ තප්පර 20ක් ඉන්නෙ නැතුව කොළ පාට බටන් එක එබුවට වැඩ කරන්නෙ නෑ. <br> The red button does not work if you press the green button without being on the page for 20 seconds. <br> 20 வினாடிகள் பக்கத்தில் இருக்காமல் பச்சை பட்டனை அழுத்தினால் சிவப்பு பட்டன் வேலை செய்யாது. <br><br> 
+        රතු පාට බටන් එක ඔබලා එන පිටුවේ තප්පර 20ක් ඉන්නෙ නැතුව කොළ පාට බටන් එක එබුවට වැඩ කරන්නෙ නෑ. <br> The red button does not work if you press the green button without being on the page for 20 seconds.<br><br> 
         ඒක නිසා කියපු විදිහට පිලිවෙලට කරන්න <br> fallow this Rules  </p>
 
     <button id="redButton" class="btnRed2"style="-webkit-text-size-adjust: auto; background-color: red; border-radius: 10px;
