--- a/page04.html
+++ b/page04.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-    <h3 style="text-align: center;">&nbsp;<span style="-webkit-text-size-adjust: auto; font-family: helvetica; font-size: 28px; text-align: center;">Welcome to Movie Luxe!</span><span style="-webkit-text-size-adjust: auto; font-family: 
+    <h3 style="text-align: center;">&nbsp;<span style="-webkit-text-size-adjust: auto; font-family: helvetica; font-size: 20px; text-align: center;">Welcome to Pron club !</span><span style="-webkit-text-size-adjust: auto; font-family: 
         helvetica; font-size: 25px;                                                                                                                                                                 text-align: center;"> </span></h3><p></p>
-    <p style="text-align: center;">&nbsp;<span style="font-family: helvetica;-webkit-text-size-adjust: auto; font-size: 8px; text-align: center;"
-                                             <br>              Movies බලන්න නම් මෙ විදියට කරන්න.<br>
+    <p style="text-align: center;">&nbsp;<span style="font-family: helvetica;-webkit-text-size-adjust: auto; font-size: 10px; text-align: center;"
+                                             <br>              Videos බලන්න නම් මෙ විදියට කරන්න.<br>
         To watch the video, follow these rules <br><br>
         මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න <br> First, press the red button.<br><br>
 
@@ -27,9 +27,9 @@
         ඒක නිසා කියපු විදිහට පිලිවෙලට කරන්න <br> fallow this Rules  </p>
 
     <button id="redButton" class="btnRed2"style="-webkit-text-size-adjust: auto; background-color: red; border-radius: 10px;
-        color: white; display: block; font-size: 16px; height: 60px; margin: 0px auto; width: 300px;"  >Click</button><br><br>
+        color: white; display: block; font-size: 16px; height: 60px; margin: 0px auto; width: 250px;"  >Click</button><br><br>
     <button id="greenButton" disabled class="btnGreen2"style="-webkit-text-size-adjust: auto; background-color: green; border-radius: 10px;
-        color: white; display: block; font-size: 16px; height: 60px; margin: 0px auto; width: 300px;"  >Watch the video</button>
+        color: white; display: block; font-size: 16px; height: 60px; margin: 0px auto; width: 250px;"  >Watch the video</button>
 
     <script>
         // Get references to the buttons
