--- a/page04.html
+++ b/page04.html
@@ -13,9 +13,7 @@
     <p style="text-align: center;">&nbsp;<span style="font-family: helvetica;-webkit-text-size-adjust: auto; font-size: 8px; text-align: center;"
                                              <br>              Videos බලන්න නම් මෙ විදියට කරන්න.<br>
         To watch the video, follow these rules <br><br>
-        මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න <br> First, press the red button.<br><br>
-
-          ඊටපස්සෙ ඔයාව වෙන පිටුවකට යයි. <br>  Then you will be taken to another page.<br><br>
+        මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න ඊටපස්සෙ ඔයාව වෙන පිටුවකට යයි.  <br> First, press the red button,Then you will be taken to another page.<br>
 
         ඒ පිටුවේ තප්පර 20ක් විතර ඉන්න <br> Stay on the page for about 20 seconds.<br><br>
 
