--- a/page04.html
+++ b/page04.html
@@ -10,10 +10,11 @@
 
     <h3 style="text-align: center;">&nbsp;<span style="-webkit-text-size-adjust: auto; font-family: helvetica; font-size: 18px; text-align: center;">Welcome to Pron club !</span><span style="-webkit-text-size-adjust: auto; font-family: 
         helvetica; font-size: 25px;                                                                                                                                                                 text-align: center;"> </span></h3><p></p>
-    <p style="text-align: center;">&nbsp;<span style="font-family: helvetica;-webkit-text-size-adjust: auto; font-size: 8px; text-align: center;"
+    <p style="text-align: center;">&nbsp;<span style="font-family: helvetica;-webkit-text-size-adjust: auto; font-size: 10px; text-align: center;"
                                              <br>              Videos බලන්න නම් මෙ විදියට කරන්න.<br>
         To watch the video, follow these rules <br><br>
-        මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න ඊටපස්සෙ ඔයාව වෙන පිටුවකට යයි.  <br> First, press the red button,Then you will be taken to another page.<br>
+        මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න ඊටපස්සෙ ඔයාව වෙන පිටුවකට යයි.  <br> First, press the red button,Then you will be taken to another page.<br><br>
+                                                                                                                                        
 
         ඒ පිටුවේ තප්පර 20ක් විතර ඉන්න <br> Stay on the page for about 20 seconds.<br><br>
 
@@ -21,7 +22,7 @@
 
         එතකොට ඔයාව Movie එකට කෙලින්ම යයි <br> Then you will go directly to the Movie.<br><br> 
 
-        රතු පාට බටන් එක ඔබලා එන පිටුවේ තප්පර 20ක් ඉන්නෙ නැතුව කොළ පාට බටන් එක එබුවට වැඩ කරන්නෙ නෑ. <br> The red button does not work if you press the green button without being on the page for 20 seconds.<br><br> 
+        කියලා තියන විදියට  කරොත්  විතරයි ඔයාට video බලන්න පුළුවන්. <br> You can watch the video only if you follow the instructions.<br><br> 
         ඒක නිසා කියපු විදිහට පිලිවෙලට කරන්න <br> fallow this Rules  </p>
 
     <button id="redButton" class="btnRed2"style="-webkit-text-size-adjust: auto; background-color: red; border-radius: 10px;
