--- a/page04.html
+++ b/page04.html
@@ -18,12 +18,12 @@
 
         ඒ පිටුවේ තප්පර 20ක් විතර ඉන්න <br> Stay on the page for about 20 seconds.<br><br>
 
-        ඊටපස්සෙ බැක් වෙලා ඇවිත් ආපහු දෙවෙනියට තියෙන කොළ පාට බටන් එක ඔබන්න <br> Then come back and press the green button <br><br>
+        ඊටපස්සෙ බැක් වෙලා ඇවිත් ආපහු දෙවෙනියට තියෙන කොළ පාට බටන් එක ඔබන්න. <br> Then come back and press the green button. <br><br>
 
-        එතකොට ඔයාව Video එකට කෙලින්ම යයි <br> Then you will go directly to the video.<br><br> 
+        එතකොට ඔයාව Video එකට කෙලින්ම යයි. <br> Then you will go directly to the video.<br><br> 
 
         කියලා තියන විදියට  කරොත්  විතරයි ඔයාට video බලන්න පුළුවන්. <br> You can watch the video only if you follow the instructions.<br><br> 
-        ඒක නිසා කියපු විදිහට පිලිවෙලට කරන්න <br> fallow this Rules  </p>
+        ඒක නිසා කියපු විදිහට පිලිවෙලට කරන්න. <br> fallow this Rules. </p>
 
     <button id="redButton" class="btnRed2"style="-webkit-text-size-adjust: auto; background-color: red; border-radius: 10px;
         color: white; display: block; font-size: 16px; height: 60px; margin: 0px auto; width: 230px;"  >Click</button><br>
