--- a/page04.html
+++ b/page04.html
@@ -12,11 +12,11 @@
         helvetica; font-size: 25px;                                                                                                                                                                 text-align: center;"> </span></h3><p></p>
     <p style="text-align: center;">&nbsp;<span style="font-family: verdana;-webkit-text-size-adjust: auto; font-size: 11px; text-align: center;"
                                              <br>              Videos බලන්න නම් මෙ විදියට කරන්න.<br>
-        To watch the video, follow these rules <br><br>
+        To watch the video, follow these rules.<br><br>
         මුලින්ම තියෙන රතු පාට බටන් එක ඔබන්න ඊටපස්සෙ ඔයාව වෙන පිටුවකට යයි.  <br> First, press the red button,Then you will be taken to another page.<br><br>
                                                                                                                                         
 
-        ඒ පිටුවේ තප්පර 20ක් විතර ඉන්න <br> Stay on the page for about 20 seconds.<br><br>
+        ඒ පිටුවේ තප්පර 20ක් විතර ඉන්න.<br> Stay on the page for about 20 seconds.<br><br>
 
         ඊටපස්සෙ බැක් වෙලා ඇවිත් ආපහු දෙවෙනියට තියෙන කොළ පාට බටන් එක ඔබන්න. <br> Then come back and press the green button. <br><br>
 
